Fix z-index of menu in mobile mode

--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -14,7 +14,7 @@ body {
 header {
     position: fixed;
     width: 100%;
-    z-index: 2;
+    z-index: 3;
     user-select: none;
 }
 
